--- a/src/components/carousel/CarouselComponent.css
+++ b/src/components/carousel/CarouselComponent.css
@@ -16,6 +16,18 @@
   width: 100%;
   border-radius: 10px;
 }
+
 .recipe p {
   color: #333;
+}
+
+.swiper-button-next, .swiper-button-prev {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  padding: 10px;
+  color: white;
+}
+
+.swiper-button-next:hover, .swiper-button-prev:hover {
+  background-color: rgba(0, 0, 0, 0.6);
 }
